Reorganize with Transmission subrepo.

--- a/monodevelop-hg/monodevelop-hg.csproj
+++ b/monodevelop-hg/monodevelop-hg.csproj
@@ -104,7 +104,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
-    <ProjectReference Include="Mercurial\Mercurial\Mercurial.csproj">
+    <ProjectReference Include="..\Transmission\Mercurial\Mercurial.csproj">
       <Project>{FADE5BAA-E0A3-4B05-A121-CD33A90A76A9}</Project>
       <Name>Mercurial</Name>
     </ProjectReference>
