--- a/monodevelop-hg/monodevelop-hg.csproj
+++ b/monodevelop-hg/monodevelop-hg.csproj
@@ -119,13 +119,13 @@
     </Reference>
     <Reference Include="System.Core" />
     <Reference Include="MonoDevelop.Core">
-      <HintPath>..\..\unity\monodevelop\main\build\bin\MonoDevelop.Core.dll</HintPath>
+      <HintPath>..\..\monodevelop\main\build\bin\MonoDevelop.Core.dll</HintPath>
     </Reference>
     <Reference Include="MonoDevelop.Ide">
-      <HintPath>..\..\unity\monodevelop\main\build\bin\MonoDevelop.Ide.dll</HintPath>
+      <HintPath>..\..\monodevelop\main\build\bin\MonoDevelop.Ide.dll</HintPath>
     </Reference>
     <Reference Include="MonoDevelop.VersionControl">
-      <HintPath>..\..\unity\monodevelop\main\build\AddIns\VersionControl\MonoDevelop.VersionControl.dll</HintPath>
+      <HintPath>..\..\monodevelop\main\build\AddIns\VersionControl\MonoDevelop.VersionControl.dll</HintPath>
     </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
